Removed commented text in mentorship model, removed about thirty lines of redundant HTML code in user edit view, and fixed Bootstrap columns to support one column on small screens and three columns on md-lg screens

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -620,6 +620,10 @@ a.btn:hover {
   font-weight: bold;
 }
 
+#gray-text {
+  color: #9B9B9B;
+}
+
 /* Peer List Section */
 .profile-list {
   list-style: none;
